Some wording changes

--- a/data/text-entry.html
+++ b/data/text-entry.html
@@ -3,7 +3,7 @@
     <link href="panel.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-	<h2>Close them all!</h2>
+	<h2>Power Close</h2>
     <input type="text" placeholder="Domain name to be closed" id="edit-box">
     <span class="footer-message">Press <i>Enter</i> to close them all or <i>Esc</i> to cancel</span>
   </body>
