--- a/data/text-entry.html
+++ b/data/text-entry.html
@@ -3,8 +3,19 @@
     <link href="panel.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+	<script type="text/javascript">
+		window.onload = function(){
+  			var edit_box = document.getElementById ('edit-box');
+	  		edit_box.focus ();
+			edit_box.select ();
+		}
+	</script>
 	<h2>Power Close</h2>
     <input type="text" placeholder="Domain name to be closed" id="edit-box">
-    <span class="footer-message">Press <i>Enter</i> to close them all or <i>Esc</i> to cancel</span>
+    <span class="footer-message">
+		Press <i>Enter</i> to close them all or <i>Esc</i> to cancel.
+		<br /><br />		
+		<i>An addon by <a href="http://www.mos3abof.com" target="_blank"><i>mos3abof</a></i>.
+	</span>
   </body>
 </html>
