Minor code formatting.

--- a/data/text-entry.html
+++ b/data/text-entry.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-    <link href="panel.css" type="text/css" rel="stylesheet">
+	<link href="panel.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-	<h2>Power Close</h2>
-    <input type="text" placeholder="Domain name to be closed" id="edit-box">
+<h2>Power Close</h2>
+<input type="text" placeholder="Domain name to be closed" id="edit-box">
     <span class="footer-message">
 		Press <i>Enter</i> to close them all or <i>Esc</i> to cancel.
-		<br /><br />		
-		<i>An addon by <a href="http://www.mos3abof.com" target="_blank"><i>mos3abof</a></i>.
+		<br/><br/>
+		<i>An addon by <a href="http://www.mos3abof.com" target="_blank"><i>mos3abof</i></a>.
 	</span>
-  </body>
+</body>
 </html>
