Minor cosmetic changes.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,11 +4,11 @@
 </head>
 <body>
 <h2>Power Close</h2>
-<input type="text" placeholder="Domain name to be closed" id="edit-box"/>
+<input type="text" placeholder="Domain name, or keyword, to be closed" id="edit-box"/>
 <span class="footer-message">
 	Press <i>Enter</i> to close them all or <i>Esc</i> to cancel.
 	<br/><br/>
-	<i>An addon by <a href="http://www.mos3abof.com" target="_blank"><i>mos3abof</i></a>.</i>
+	<i>For more information visit <a href="https://www.power-close.com" target="_blank"><i>power-close.com</i></a>.</i>
 </span>
 <script type="application/javascript" src="popup.js"></script>
 </body>
